--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -46,7 +46,7 @@
         position: absolute;
         right: 40px;
         top: 20px;
-        background-color: var(--orange);
+        background-color: var(--irises);
         border-radius: 8px;
         padding: 4px 8px;
         color: white;
