--- a/resources/css/style-nav.css
+++ b/resources/css/style-nav.css
@@ -68,6 +68,7 @@
 }
 
 .nav-item {
+    
     font-family: 'Lato', sans-serif;
 }
 
@@ -78,6 +79,6 @@ header.presto-nav {
 }
 
 .nav-active {
-    background-color:var(--orange);
+    background-color:var(--papaya);
     box-shadow: 5px -1px 12px -5px grey;
 }
