--- a/resources/css/style-nav.css
+++ b/resources/css/style-nav.css
@@ -82,3 +82,7 @@ header.presto-nav {
     background-color:var(--papaya);
     box-shadow: 5px -1px 12px -5px grey;
 }
+
+#generalNavBarUl{
+    transform: translateX(-20px);
+}
