added title (x-slot) to all web pages + fixed alert messages + link to becomeRevisor form

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12060,6 +12060,12 @@ header.presto-nav {
     bottom: 0px;
     right: 0px;
 }
+
+.deniedAccess, .welcomePageMessage{
+    position: absolute;
+    top: 75px;
+    width: 100%;
+}
 .nav-link{
     color: var(--panna);
 }
