--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -146,3 +146,9 @@
     bottom: 0px;
     right: 0px;
 }
+
+.deniedAccess, .welcomePageMessage{
+    position: absolute;
+    top: 75px;
+    width: 100%;
+}
