--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -462,6 +462,10 @@ body {
     background-color: var(--starry);
     color: var(--panna);
 }
+.img-preview{
+    width: 250px;
+    height: 250px;
+}
 
 
 
