--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11759,6 +11759,12 @@ body {
 .img-preview{
     width: 250px;
     height: 250px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+}
+.previewbox{
+    border-radius: 10px;
 }
 
 
