--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -481,6 +481,12 @@ body {
     border-radius: 10px;
 }
 
+.titleDetails{
+    font-size: 38px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
+}
+
 
 
 
